Fixed API and query limits
:bug: Fixed upper and lower bound of query.
:bug: Fixed parsing with proper error messages.
